# RUSTBU

./: Cargo.toml  Diesel.toml  README.md  Rocket.toml  run.sh
html/: game.html  index.html
src/: game_pieces.rs  game_rules_test.rs  game_state.rs  game_test.rs  lib.rs  main.rs  models.rs  schema.rs
src/ai/: chum_bucket.rs  chum_tests.rs  mod.rs
src/api/: api_controller.rs  api_gamestate.rs  api_tests.rs  do_move.rs  game_handling.rs  game_packets.rs  handle_socket.rs  mod.rs  move_handling.rs  tests.rs  web_sockets.rs
src/db/: models.rs  rustbu.sql  schema.rs
src/rules/: game_board.rs  game_hodler.rs  game_instance.rs  game_rules.rs  game_rules_test.rs  game_state.rs  game_tests.rs  game_tile.rs  mod.rs  tests.rs
