[package]
name = "rustbu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "*", features = ["sqlite"] }
rand = "0.8.5"
rocket = "0.5.0"
rusqlite = { version = "0.30.0", features = ["bundled"] }
serde = "1.0.195"
serde_json = "1.0.111"
